// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBar renders with defaultProps 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with onRemoveClick 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <a
          className="ax-link ax-link--style-night"
          onClick={[Function]}
        >
          <svg
            className="ax-icon ax-icon--cross"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with size medium 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--medium ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with size small 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type error 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--error"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--error ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--warning"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type info 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type success 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--success"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--success ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--tick"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type warning 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--warning"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--warning ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--warning"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;
